# bassment

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  deploy-to-crates-io.yml  frontend.yml  release.yml
bassment/: Cargo.toml
bassment-cli/: Cargo.toml
bassment-model/: Cargo.toml
frontend/: .eslintrc.js  .gitignore  App.tsx  README.md  TROUBLESHOOTING.md  app.json  babel.config.js  config-overrides.js  index.js  index.ts  index.web.js  index.web.ts  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json
frontend/__tests__/: App-test.tsx
frontend/android/: settings.gradle
frontend/ios/: Podfile
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  AppContainer.tsx  AppHeader.tsx  AppSidebar.tsx  index.ts  index.web.ts  schema.rs
frontend/web/: index.html  webpack.config.js  webpack.rules.js
migrations/2022-04-10-012747_create_schema/: down.sql  up.sql
migrations/2022-04-14-230620_add_track_metadata/: down.sql  up.sql
migrations/2022-04-14-233511_add_resource/: down.sql  up.sql
migrations/2022-04-14-233511_add_resources/: down.sql  up.sql
migrations/2022-04-14-235418_modification_dates/: down.sql  up.sql
migrations/2022-04-15-003631_add_cue/: down.sql  up.sql
migrations/2022-04-15-003631_add_cues/: down.sql  up.sql
migrations/2022-04-15-004824_add_crate_and_playlist/: down.sql  up.sql
migrations/2022-04-15-004824_add_playlist/: down.sql  up.sql
migrations/2022-04-15-004824_add_playlists/: down.sql  up.sql
migrations/2022-04-15-014128_add_user/: down.sql  up.sql
migrations/2022-04-15-014128_add_users/: down.sql  up.sql
migrations/2022-04-15-223637_add_token_secret/: down.sql  up.sql
migrations/2022-05-01-232302_add_descriptions/: down.sql  up.sql
migrations/2022-05-01-233427_rename_to_files/: down.sql  up.sql
migrations/2022-05-01-233640_add_blobs/: down.sql  (+1 more)
scripts/: add-sample-data  bootstrap-frontend  bundle-frontend  clear-db  drop-all-db-content  frontend-run  run-dev-backend  run-dev-frontend  summarize-db
src/: actions.rs  constants.rs  db.rs  error.rs  main.rs  models.rs  options.rs  schema.rs
(+329 files in other folders)
