[package]
name = "bassment"
description = "Music library server with support for cue points, playlists, crates and more"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/fwcd/bassment"
categories = ["multimedia", "audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
actix-multipart = "0.4"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
r2d2 = "0.8" # only for the conversion From<r2d2::Error> to our Error
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-actix-web = "0.5"
tracing-subscriber = "0.3"
jsonwebtoken = "8.1"
chrono = "0.4"
bcrypt = "0.13"
passwords = "3.1"
clap = { version = "3.1", features = ["derive"] }
once_cell = "1.10"
regex = "1.5"
